test/subjects/errors/break_outer.php
<?php

	break; // { Error: Cannot break/continue 1 levels }

?>
